tests/compilefail12.out
[1mtests/compilefail12.pas:9:28: [0m[1m[91merror:[0m Semicolon expected
     9 | procedure two(var b:integer)	

